<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".BaseActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/second"
        android:text="@string/go_to_second"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/set_text"
        android:text="@string/set_dynamic_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:textSize="40sp"
        android:id="@+id/dynamic_text"
        android:freezesText="false"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_layout_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_layout_fragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_dynamic_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_dynamic_fragment" />

        <Button
            android:id="@+id/btn_dynamic_fragment_fixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_dynamic_fragment_fixed" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_multi_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_multi_action" />

    <TextView
        android:layout_marginTop="@dimen/item_offset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_transactions_by_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_transactions_by_id" />

        <Button
            android:id="@+id/btn_transactions_by_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_transactions_by_tag" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_state_loss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_state_loss" />

    <Button
        android:id="@+id/btn_coop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cooperation" />

    <Button
        android:id="@+id/hello_module"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_module" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/container"/>

</LinearLayout>