<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment_part.activity.TransactionActivityById">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/add_fragment" />

        <Button
            android:id="@+id/btn_remove_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/remove_fragment" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/add_to_back_stack" />
    </LinearLayout>

    <Button
        android:id="@+id/rollback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rollback"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/red_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <FrameLayout
            android:id="@+id/green_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/blue_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />
</LinearLayout>
